--- a/_config.yml
+++ b/_config.yml
@@ -2,6 +2,6 @@ remote_theme: pages-themes/slate@v0.2.0
 plugins:
 - jekyll-remote-theme
 
-title: [AlphaBotCore Planification Repository]
-description: [On this page you will find all the planning for this project.]
+title: AlphaBotCore Planification Repository
+description: On this page you will find all the planning for this project.
 show_downloads: false
